# Ease-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  baker_config.yml  configure.sh  layout.html
cmake/: ConfigureFile.cmake
example/: project.sowa
res/: default3d.fs  sprite2d.fs  sprite2d.vs
res/shaders/: default3d.vs  fullscreen.vs  sprite2d.fs  sprite2d.vs  text2d.fs
src/: git_hash.cpp.in  main.cpp  sowa.hpp
src/core/: application.cpp  application.hpp  builtin_data.cpp  debug.cpp  debug.hpp  debug_fmt.hpp  file.cpp  file.hpp  input.cpp  input.hpp  resource.cpp  resource.hpp  timer.hpp  tween.hpp
src/core/argparser/: argparser.cpp  argparser.hpp
src/core/filesystem/: data_file_server.cpp  data_file_server.hpp  file_server.hpp  filesystem.cpp  filesystem.hpp  folder_file_server.cpp  folder_file_server.hpp  zip_file_server.cpp  zip_file_server.hpp
src/core/serialize/: document.hpp
src/data/: color.hpp  id_generator.hpp  project_settings.cpp  project_settings.hpp  random_number_generator.hpp  zip_reader.cpp  zip_reader.hpp  zip_writer.cpp  zip_writer.hpp
src/editor/: editor.cpp  editor.hpp  gui.cpp  gui.hpp  hot_reloader.cpp  hot_reloader.hpp
src/math/: math.hpp  matrix.cpp  matrix.hpp  rect.cpp  rect.hpp  vector2.hpp
src/platform/web/: web.hpp
src/res/: imgui.ini
src/res/shaders/: default3d.fs  fullscreen.fs  sprite2d.fs  text2d.fs  text2d.vs
src/resource/: audio_stream.cpp  audio_stream.hpp  font.cpp  font.hpp  image_texture.cpp  image_texture.hpp  mesh.cpp  mesh.hpp  resource_locker.cpp  resource_locker.hpp  resource_registry.cpp  resource_registry.hpp  sprite_sheet_animation.hpp
src/scene/: allocator.hpp  node.cpp  node.hpp  node_db.cpp  node_db.hpp  scene.cpp  scene.hpp
src/scene/node/: animatedsprite2d.cpp  animatedsprite2d.hpp  audiostreamplayer.cpp  audiostreamplayer.hpp  camera2d.cpp  camera2d.hpp  node2d.cpp  node2d.hpp  progress_bar.cpp  progress_bar.hpp  sprite2d.cpp  sprite2d.hpp  text2d.cpp  text2d.hpp
src/servers/: audio_server.cpp  audio_server.hpp  script_server.cpp  script_server.hpp
src/utils/: easing.cpp  easing.hpp  random.cpp  random.hpp  store.hpp  string.cpp  string.hpp  time.hpp  utils.hpp
src/visual/: gl.hpp  model.cpp  model.hpp  model_builder.cpp  model_builder.hpp  renderer.cpp  renderer.hpp  renderer2d.cpp  renderer2d.hpp  shader.cpp  shader.hpp  viewport.cpp  viewport.hpp  visual.cpp  visual.hpp  window.cpp  window.hpp
src/visual/gl/: buffer.cpp  buffer.hpp  vertex_array.cpp  vertex_array.hpp
